@@ -15,6 +15,7 @@
             NRF.setScanResponse now works on SDK15
             Fix g.wrapString if string ends with a bitmap
             g.wrapString now splits long words if they are too long for a line
+            Add Storage.getStats to get more fine-grained info about Storage
 
      2v12 : nRF52840: Flow control XOFF is now sent at only 3/8th full - delays in BLE mean we can sometimes fill our 1k input buffer otherwise
             __FILE__ is now set correctly for apps (fixes 2v11 regression)
